Add updated assignment notebook

--- a/module1-text-data/LS_DS_411_Text_Data_Assignment.ipynb
+++ b/module1-text-data/LS_DS_411_Text_Data_Assignment.ipynb
@@ -1110,7 +1110,9 @@
     }
    ],
    "source": [
-    "wc_diff.sort_values(by='diff', ascending=False)[:10]"
+    "wc_diff.sort_values(by='diff', ascending=False)[:10]\n",
+    "# As might be expected, the word \"great\" was used 20% more frequently in reviews for \n",
+    "# 4-5 vs. 1-3 star-rated coffee shops. \"Bad\" was used 9% more often in lowly-rated coffee shops."
    ]
   },
   {
