--- a/module2-vector-representations/LS_DS_412_Vector_Representations_Lecture.ipynb
+++ b/module2-vector-representations/LS_DS_412_Vector_Representations_Lecture.ipynb
@@ -2343,9 +2343,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "U4-S1-NLP-DS6 (Python3)",
+   "display_name": "U4-S1-NLP (Python3)",
    "language": "python",
-   "name": "u4-s1-nlp-ds6"
+   "name": "u4-s1-nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2357,7 +2357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
